Link update on homepage

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
    <H1>Odin Recipes</H1> <br>
    <br>
-   <a href="recipes/recipename.html">Lasagna</a>
+   <a href="recipes/lasagna.html">Lasagna</a>
 </body>
 </html>
