--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
    <H1>Odin Recipes</H1> <br>
    <br>
+   <p>Sample text</p><br>
+   <div>This is a bunch of text</div><br>
+   <button>Inline method</button>
+
    <a href="recipes/lasagna.html">Lasagna</a>
 </body>
 </html>
